--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "todo-backend",
+  "name": "express-project-boilerplate",
   "version": "0.0.1",
-  "description": "Get some experience with backend programing in node.js with typescript",
+  "description": "Express / Typescript boilerplate",
   "main": "src/index.js",
   "author": "fabifors",
   "license": "MIT",
